refactor: 보안 로직 개선 및 코드 구조 정리
- 인증/영상 도메인 입력 검증 및 상태 관리 로직 개선
- VC 발급 상태를 enum으로 전환하고 상태 전이 검증 추가
- 미사용 코드 제거 및 주석 추가